...
            Button {
                buyItem()
            } label: {
                Circle()
                    .fill(shoppingItem.bought ? Color.green : Color.orange)
                    .frame(width: 20, height: 20)
            }.accessibilityLabel("DoneButton")
        }
    }
}

// MARK: - Actions
extension ShoppingItemRow {
...
}

struct ShoppingItemRow_Previews: PreviewProvider {
    static var previews: some View {
        Group {
            ShoppingItemRow(
                shoppingItem: ShoppingItem(id: 3, title: "Coconuts", notes: "No notes", bought: false, quantity: 9)
            )
            ShoppingItemRow(
                shoppingItem: ShoppingItem(id: 3, title: "Coconuts", notes: "No notes", bought: true, quantity: 9)
            )
                .preferredColorScheme(.dark)
        }
...
